# GREAT-IFCB

./: .gitignore  CMakeLists.txt  README.md
doc/: IFCB_CONFIG.xml
src/LibGnut/: CMakeLists.txt
src/LibGnut/gall/: gallbias.cpp  gallbias.h  gallnav.cpp  gallnav.h  gallobs.cpp  gallobs.h
src/LibGnut/gcoders/: biabernese.cpp  biabernese.h  gcoder.cpp  gcoder.h  gcoder_buffer.cpp  gcoder_buffer.h  rinexn.cpp  rinexn.h  rinexo.cpp  rinexo.h  rinexo2.cpp  rinexo2.h  rinexo3.cpp  rinexo3.h
src/LibGnut/gdata/: gdata.cpp  gdata.h  geph.cpp  geph.h  gmonit.cpp  gmonit.h  gnav.cpp  gnav.h  gnavbds.cpp  gnavbds.h  gnavgal.cpp  gnavgal.h  gnavglo.cpp  gnavglo.h  gnavgps.cpp  gnavgps.h  gobsgnss.cpp  gobsgnss.h  grnxhdr.cpp  grnxhdr.h  grxnhdr.cpp  grxnhdr.h
src/LibGnut/gio/: gfile.cpp  gfile.h  gio.cpp  gio.h  giof.cpp  giof.h  glog.cpp  glog.h  gnote.cpp  gnote.h
src/LibGnut/gmodels/: gbancroft.cpp  gbancroft.h  gbias.cpp  gbias.h
src/LibGnut/gset/: gsetbase.cpp  gsetbase.h  gsetgen.cpp  gsetgen.h  gsetgnss.cpp  gsetgnss.h  gsetinp.cpp  gsetinp.h  gsetout.cpp  gsetout.h
src/LibGnut/gutils/: ExportGnut.h  gcommon.h  gconst.cpp  gconst.h  gfileconv.cpp  gfileconv.h  gmutex.cpp  gmutex.h  gnss.cpp  gnss.h  gobs.cpp  gobs.h  gpair.cpp  gpair.h  gsys.cpp  gsys.h  gtime.cpp  gtime.h  gtimesync.cpp  gtimesync.h  gtriple.cpp  gtriple.h  gtypeconv.cpp  gtypeconv.h
src/LibGnut/pugixml/src/: pugixml.cpp  pugixml.hpp
src/LibIFCB/: CMakeLists.txt
src/LibIFCB/gall/: gallambflag.cpp  gallambflag.h  gallproc.cpp  gallproc.h
src/LibIFCB/gambfix/: gambcommon.cpp  gambcommon.h
src/LibIFCB/gcoders/: ambflag.cpp  ambflag.h  ifcb.cpp  ifcb.h
src/LibIFCB/gdata/: gambflag.cpp  gambflag.h  gifcb.cpp  gifcb.h
src/LibIFCB/gproc/: gcorbds.cpp  gcorbds.h  gifcbproc.cpp  gifcbproc.h  goutlierproc.h  goutliterproc.cpp  gpreeditproc.cpp  gpreeditproc.h
src/LibIFCB/gset/: gcfg_ifcb.cpp  gcfg_ifcb.h  gsetpreedit.cpp  gsetpreedit.h
src/LibIFCB/gutils/: ExportIFCB.h  ginfolog.cpp  ginfolog.h  gstring.cpp  gstring.h
src/LibMat/: CMakeLists.txt
src/LibMat/gutils/: ExportMat.h
src/LibMat/newmat/: cholesky.cpp  myexcept.h  newmat.h  newmatap.h  newmatio.h
src/app/: CMakeLists.txt  great_ifcb.cpp
util/: README.md
util/PythonScripts/: crx2rnx  download_dcb.py  download_nav.py  download_obs.py  draw_ifcb.py  draw_rms_ifcb.py  gnss_config.py  gnss_time.py  gnss_tools.py  ifcb.py  ifcb_example.ini  requirements.txt  utils.py
